Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91490

[REG 5.14 -> 5.15] Segfault / "Check failed: ptr_." related to bluetooth with --enable-experimental-web-platform-features

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.4
    • 5.15.0, 5.15.2, 5.15.3
    • WebEngine
    • None
    • 891b97e59d2a68bc24d36eceebd18b71027c66d1 (qt/qtwebengine/5.15)

      When visiting accounts.google.com with --enable-experimental-web-platform-features, QtWebEngine crashes with:

      [42982:42982:0302/125308.774871:FATAL:scoped_refptr.h(235)] Check failed: ptr_. 
      #0 0x7fba0813c9a5 base::debug::CollectStackTrace()
      #1 0x7fba07f65a89 base::debug::StackTrace::StackTrace()
      #2 0x7fba07f65a40 base::debug::StackTrace::StackTrace()
      #3 0x7fba07f42914 logging::LogMessage::~LogMessage()
      #4 0x7fba07f4307e logging::LogMessage::~LogMessage()
      #5 0x7fba07f4a9a3 logging::CheckError::~CheckError()
      #6 0x7fba0706e688 scoped_refptr<>::operator->()
      #7 0x7fba09f2c554 device::BluetoothAdapterFactory::GetAdapter()
      #8 0x7fba0e67571d BluetoothAdapterFactoryWrapper::AcquireAdapter()
      #9 0x7fba0e613841 content::WebBluetoothServiceImpl::GetAvailability()
      #10 0x7fba03e84169 blink::mojom::WebBluetoothServiceStubDispatch::AcceptWithResponder()
      #11 0x7fba0e64a92c blink::mojom::WebBluetoothServiceStub<>::AcceptWithResponder()
      #12 0x7fba08f15edc mojo::InterfaceEndpointClient::HandleValidatedMessage()
      #13 0x7fba08f13e31 mojo::InterfaceEndpointClient::HandleIncomingMessageThunk::Accept()
      #14 0x7fba08f255ed mojo::MessageDispatcher::Accept()
      #15 0x7fba08f151e7 mojo::InterfaceEndpointClient::HandleIncomingMessage()
      #16 0x7fba08f2ab27 mojo::internal::MultiplexRouter::ProcessIncomingMessage()
      #17 0x7fba08f292e0 mojo::internal::MultiplexRouter::Accept()
      #18 0x7fba08f255ed mojo::MessageDispatcher::Accept()
      #19 0x7fba08f0ba0f mojo::Connector::DispatchMessage()
      #20 0x7fba08f0be45 mojo::Connector::ReadAllAvailableMessages()
      #21 0x7fba08f0af26 mojo::Connector::OnHandleReadyInternal()
      #22 0x7fba08f0adaa mojo::Connector::OnWatcherHandleReady()
      #23 0x7fba08f0ef15 base::internal::FunctorTraits<>::Invoke<>()
      #24 0x7fba08f0ea58 base::internal::InvokeHelper<>::MakeItSo<>()
      #25 0x7fba08f0e490 _ZN4base8internal7InvokerINS0_9BindStateIMN4mojo9ConnectorEFvjEJNS0_17UnretainedWrapperIS4_EEEEEFvjEE7RunImplIRKS6_RKSt5tupleIJS8_EEJLm0EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEEOj
      #26 0x7fba08f0dce5 base::internal::Invoker<>::Run()
      #27 0x7fba03ef1194 _ZNKR4base17RepeatingCallbackIFvjEE3RunEj
      #28 0x7fba03ef0a60 mojo::SimpleWatcher::DiscardReadyState()
      #29 0x7fba03ef40d1 base::internal::FunctorTraits<>::Invoke<>()
      #30 0x7fba03ef3678 base::internal::InvokeHelper<>::MakeItSo<>()
      #31 0x7fba03ef2a6f _ZN4base8internal7InvokerINS0_9BindStateIPFvRKNS_17RepeatingCallbackIFvjEEEjRKN4mojo18HandleSignalsStateEEJS5_EEEFvjSB_EE7RunImplIRKSD_RKSt5tupleIJS5_EEJLm0EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEEOjSB_
      #32 0x7fba03ef1e2e base::internal::Invoker<>::Run()
      #33 0x7fba08f726a6 _ZNKR4base17RepeatingCallbackIFvjRKN4mojo18HandleSignalsStateEEE3RunEjS4_
      #34 0x7fba08f7174c mojo::SimpleWatcher::OnHandleReady()
      #35 0x7fba08f73364 base::internal::FunctorTraits<>::Invoke<>()
      #36 0x7fba08f73070 base::internal::InvokeHelper<>::MakeItSo<>()
      #37 0x7fba08f72be4 _ZN4base8internal7InvokerINS0_9BindStateIMN4mojo13SimpleWatcherEFvijRKNS3_18HandleSignalsStateEEJNS_7WeakPtrIS4_EEijS5_EEEFvvEE7RunImplIS9_St5tupleIJSB_ijS5_EEJLm0ELm1ELm2ELm3EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE
      #38 0x7fba08f7280c base::internal::Invoker<>::RunOnce()
      #39 0x7fba018468ea _ZNO4base12OnceCallbackIFvvEE3RunEv
      #40 0x7fba0805e88b base::TaskAnnotator::RunTask()
      #41 0x7fba080a8fec base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl()
      #42 0x7fba080a880e base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork()
      #43 0x7fba017ed5ba QtWebEngineCore::MessagePumpForUIQt::handleScheduledWork()
      #44 0x7fba017ed2db _ZZN15QtWebEngineCore18MessagePumpForUIQtC4EvENKUlvE_clEv
      #45 0x7fba017eedfa _ZSt13__invoke_implIvRZN15QtWebEngineCore18MessagePumpForUIQtC4EvEUlvE_JEET_St14__invoke_otherOT0_DpOT1_
      #46 0x7fba017ee7c5 _ZSt10__invoke_rIvRZN15QtWebEngineCore18MessagePumpForUIQtC4EvEUlvE_JEENSt9enable_ifIXsrSt6__and_IJSt7is_voidIT_ESt14__is_invocableIT0_JDpT1_EEEE5valueES7_E4typeEOSA_DpOSB_
      #47 0x7fba017edf3c _ZNSt17_Function_handlerIFvvEZN15QtWebEngineCore18MessagePumpForUIQtC4EvEUlvE_E9_M_invokeERKSt9_Any_data
      #48 0x7fba01bd468c std::function<>::operator()()
      #49 0x7fba0fc2105c QWebEngineMessagePumpScheduler::timerEvent()
      #50 0x7fb9f6d06588 QObject::event()
      #51 0x7fb9f85d38eb QApplicationPrivate::notify_helper()
      #52 0x7fb9f85d0c29 QApplication::notify()
      #53 0x7fb9f6cbec9f QCoreApplication::notifyInternal2()
      #54 0x7fb9f6cbf6f6 QCoreApplication::sendEvent()
      #55 0x7fb9f6cc045d QCoreApplicationPrivate::sendPostedEvents()
      #56 0x7fb9f6cbfd98 QCoreApplication::sendPostedEvents()
      #57 0x7fb9f6d5796c postEventSourceDispatch()
      #58 0x7fb9f12b8b84 g_main_context_dispatch
      #59 0x7fb9f130cc21 (/usr/lib/libglib-2.0.so.0.6600.7+0xa7c20)
      #60 0x7fb9f12b73b1 g_main_context_iteration
      #61 0x7fb9f6d580c7 QEventDispatcherGlib::processEvents()
      #62 0x7fb9ed89fbe8 QXcbGlibEventDispatcher::processEvents()
      #63 0x7fb9f6cbb361 QEventLoop::processEvents()
      #64 0x7fb9f6cbb6c3 QEventLoop::exec()
      #65 0x7fb9f6cbf538 QCoreApplication::exec()
      #66 0x7fb9f7c82814 QGuiApplication::exec()
      #67 0x7fb9f85d05f5 QApplication::exec()
      #68 0x557d9b374cad main
      #69 0x7fb9f610cb25 __libc_start_main
      #70 0x557d9b362c6e _start
      Task trace:
      #0 0x7fba08f714f7 mojo::SimpleWatcher::ArmOrNotify()
      #1 0x7fba08f71d3e mojo::SimpleWatcher::Context::Notify()
      

      With a release build, it segfaults instead, but I don't have a release build with debug symbols ready at the moment.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes