Do not allow WebBluetooth to continue

We do not support it.

Fixes: QTBUG-91490
Change-Id: I972e1d5cd8507571c4c2305e2f38c4345f69538e
Reviewed-by: Florian Bruhin <qt-project.org@the-compiler.org>
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>